@@ -47,7 +47,8 @@ sub configure
         # Gather Files
         [ 'Git::GatherDir'      => { exclude_filename => 'LICENSE' } ],
         qw(MetaYAML MetaJSON License Readme Manifest),
-        [ 'Test::Compile'       => { ':version' => '2.002', fail_on_warning => 1, bail_out_on_fail => 1 } ],
+        # note that 2.004 is a TRIAL release
+        [ 'Test::Compile'       => { ':version' => '2.004', fail_on_warning => 'author', bail_out_on_fail => 1 } ],
         [ 'Test::CheckDeps'     => { ':version' => '0.007', fatal => 1, level => 'suggests' } ],
 
         'NoTabsTests',
@@ -183,7 +184,8 @@ following C<dist.ini> (following the preamble):
     [Manifest]
 
     [Test::Compile]
-    fail_on_warning = 1
+    :version = 2.004
+    fail_on_warning = author
     bail_out_on_fail = 1
 
     [Test::CheckDeps]
