@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - compile test will also check for warnings, when author is testing
 
 0.010     2013-06-28 11:28:01 PDT-0700 (Karen Etheridge)
           - t/00-check-deps.t test now has TODO tests for 'recommends' and
